adds styling and info

--- a/client/index.html
+++ b/client/index.html
@@ -19,13 +19,15 @@
 </head>
 <body>
   <div id="app">
-    <h1>Chat demo</h1>
+    <h1 class="center">Chat demo</h1>
     <div id="chat-container">
 
     </div>
-    <form id="messageForm">
-      <input type="text" id="messageInput" size=100><button type="submit" id="sendBtn">Send!</button>
-    </form>
+    <div class="center">
+      <form id="messageForm">
+        <input class="input" type="text" id="messageInput" size=100><button class="btn" type="submit" id="sendBtn">Send!</button>
+      </form>
+    </div>
   </div>
 
 
